--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,23 +25,44 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         
-    <title>React App</title>
+    <title>Phonebook</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Header - set the background image for the header in the line below-->
+    <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      <div class="text-center my-5">
+        <img class="img-fluid rounded-circle mb-4" src="https://invent.kde.org/uploads/-/system/project/avatar/120/phonebook.svg.png" width="150" alt="..." />
+
+        <h1 class="text-white fs-3 fw-bolder">Phonebook</h1>
+        <p class="text-white-50 mb-0">A student project</p>
+      </div>
+    </header>
+
+    <!-- Content section-->
+    <section class="py-5">
+      <div class="container my-5">
+          <div class="row justify-content-center">
+              <div class="col-lg-6">
+                <div id="root"></div>
+              </div>
+          </div>
+      </div>
+    </section>
+
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; a student site written by Hamilton G. Jr 2023</p></div>
+    </footer>
+
   </body>
 </html>
